# cmaketest

./: CMakeLists.txt  Kconfig  autobuild-boot33.bat  cmake.bat  env.bat  readme.txt
app/updater/: external_append_pad_crc.pl  readme_updater.txt  scatter.scat  scatter_ota_spi.scat  updater_scatter_common.h  updater_scatter_ota_spi.h
app/updater/adupspackagetools/: adups_info.txt  readme.docx
app/updater/inc/: 2ndboot.h  OTA_sdcard.h  adups_bl_flash.h  adups_bl_main.h  adups_typedef.h  bspatch.h  common.h  diskio.h  fat32_utils.h  fbf_parse.h  ff.h  ff_dump_mem.h  flash.h  guilin.h  keypad.h  libc.h  loadtable.h  malloc.h  ningbo.h  ota_spi.h  pmic.h  ptable.h  qspi.h  qspi_dma.h  qspi_flash.h  qspi_host.h  qspi_nor.h  reg.h  rs_ua_flash.h  rs_ua_fs.h  rs_ua_porting.h  rsplatform.h  sdio_api.h  system.h  tinyalloc.h  updater.h  version_block.h
app/updater/lib/: abup_wosun.lib
app/updater/release/: readme_updater.txt
app/updater/src/: LzmaDecode.c  OTA_sdcard.c  StartUp.s  adups_bl_flash.c  adups_bl_main.c  bspatch.c  demo.c  flash.c  guilin.c  keypad_drv.c  loadtable.c  main.c  ningbo.c  ota_spi.c  partitions.c  pmic.c  ptable.c  qspi_core.c  qspi_dma.c  qspi_host.c  qspi_nor.c  rs_ua_flash.c  rs_ua_fs.c  rs_ua_porting.c  sdcard.c  system.c  uart.c  version_block.c
bootloader/: CMakeLists.txt  EEHandler_fatal.c  Makefile  OBM_StartUp.s  bootloader_objliblist.txt  bootloader_scatter.scat  build_bootloader.bat  main.c  vectors.s
bootloader/inc/: EEHandler.h  common.h  cpu.h  ffconf.h  fip.h  firmware_image_package.h  keypad_drv.h  loadtable.h  mbedtls_config.h  memory_buffer_alloc.h  mfpr_api.h  platform.h  ptable.h  qspi_dma.h  qspi_flash.h  qspi_host.h  qspi_nor.h  reg.h  sdio.h  secboot.h  tbbr_img_def.h  tbbr_oid.h  types.h  utils_def.h  uuid.h  version_block.h
bootloader/src/: CMakeLists.txt  EEHandler_fatal.c  OBM_StartUp.s  bignum.c  ff_dump_mem.c  ffsystem.c  fip.c  keypad_drv.c  loadtable.c  mbedtls_common.c  mbedtls_crypto.c  mbedtls_x509_parser.c  ningbo.c  pk.c  ptable.c  qspi_core.c  qspi_dma.c  qspi_host.c  qspi_nor.c  sdcard.c  secboot.c  uart.c  version_block.c  x509.c
common/: CMakeLists.txt  FreqChange.c  Kconfig  LzmaDec.c  LzmaDecode.c  LzmaLib.c  asr_lzma.c  asr_nor_flash.c  asr_property.c  bsp_tavor.c  commpm.c  diskio.c  ff.c  gpio.c  guilin.c  guilin_lite.c  intc_xirq.c  lcd_backlight_drv.c  lcd_buf.c  lcd_drv.c  lcd_fns.c  lcd_gc9305_spi_4line_1data.c  lcd_gc9306_spi.c  lcd_gc9306_spi_1_lane.c  lcd_gc9306_spi_4line_1data.c  lcd_gif_decoder.c  lcd_hal.c  lcd_panel_drv.c  lcd_spi_drv.c  lcd_st7789v_mcu.c  lcd_st7789v_spi.c  lcd_test.c  lcd_var.c  lcdd_asr.c  logo_table.c  lzop.c  lzop_buf.c  mci_lcd_asr.c  mcu_drv.c  media_clk.c  (+14 more)
common/inc/: 7z_types.h  APBCLK.h  DMA_SPI.h  Errors.h  FreqChange.h  LzFind.h  LzmaDec.h  LzmaDecode.h  LzmaEnc.h  LzmaLib.h  NSSP.h  PMUA.h  PMUM.h  PlatformConfig.h  SSP.h  SSP_DMA.h  SSP_HW_Access.h  Typedef.h  asr_lzma.h  asr_nor_flash.h  asr_property.h  backlight_drv.h  bsp.h  common.h  gpio.h  guilin.h  guilin_lite.h  intc.h  intc_list.h  lcd_common.h  lcd_drv.h  lcd_fns.h  lcd_predefine.h  lcd_reg.h  lcd_test.h  lcd_test_data.h  lcdd_asr.h  logo_table.h  lzoconf.h  lzop.h  (+21 more)
driver/: CMakeLists.txt  Kconfig  bootloader_objliblist.txt
driver/lcd/: CMakeLists.txt  Kconfig  bsp_common.c  hal_board.c  hal_disp.c  halsoc_lcd_mipi.c  halsoc_lcd_mipi_dphy.c  halsoc_lcd_mipi_dsi.c  halsoc_lcd_spi.c  halsoc_lcdc.c  rm69330_mipi.c  st7789v_spi.c  st7796s_mipi.c
driver/lcd/inc/: bsp_common.h  hal_board.h  hal_conf.h  hal_disp.h  hal_drv_conf.h  halsoc_lcd_mcu.h  halsoc_lcd_mipi.h  halsoc_lcd_mipi_dphy.h  halsoc_lcd_mipi_dsi.h  halsoc_lcd_spi.h  halsoc_lcdc.h  icna3310_mipi.h  ili9806e_mipi.h  rm69330_mipi.h  st7567_spi.h  st7735s_spi.h  st7789v_mcu.h  st7789v_spi.h  st7796s_mipi.h
driver/usb/: CMakeLists.txt  FlashPartition.h  UsbMgr.c  UsbMgr_config.h  UsbMgr_util.c  UsbMgr_util.h  mvUsbCh9.h  mvUsbCore.h  mvUsbDebug.h  mvUsbDefs.h  mvUsbDevApi.h  mvUsbDevCh9.c  mvUsbDevMain.c  mvUsbDevPrv.h  mvUsbDevRecv.c  mvUsbDevSend.c  mvUsbDevUtl.c  mvUsbHsDevCncl.c  mvUsbHsDevMain.c  mvUsbHsDevUtl.c  mvUsbLog.c  mvUsbLog.h  mvUsbMemory.c  mvUsbMemory.h  mvUsbModem.c  mvUsbModem.h  mvUsbNet.c  mvUsbNet.h  mvUsbStorage.c  mvUsbStorage.h  mvUsbStorage_buf.c  netif_pc.c  rndis.c  rndis_buff.c  udc2_hw.h  udc_driver.c  usb1_device.c  usb2_device.c  usb_descriptor.c  usb_device.c  (+3 more)
driver/usb/inc/: MBIM.h  UsbMgr.h  Usbmgr_Descriptors.h  bbic2.h  define.h  rndis.h  udc_config.h  udc_def.h  udc_driver.h  udc_hw.h  udc_types.h  usb.h  usb1.h  usb1_device.h  usb2_device.h  usbTrace.h  usb_cable.h  usb_config.h  usb_def.h  usb_descriptor.h  usb_device.h  usb_device_config.h  usb_device_def.h  usb_device_types.h  usb_init.h  usb_macro.h  usbmgr_apps.h  usbmgr_apps_config.h  usbmgr_apps_def.h  usbmgrtest.h
os/: CMakeLists.txt  os_hal.c
os/inc/: os_hal.h
scripts/: build.bat  build_no_ui.bat  find_replace.py  firmware.py  hal_deleted_objliblist.txt  mountX.bat  timestamp.bat
scripts/boards/: Kconfig
scripts/boards/crane_evb/: Kconfig.board  bld_custom_rel.conf  bld_mhal_rel_dm.conf  crane_evb_a0_custom_S_from_crane.conf  crane_evb_a0_custom_X_from_crane.conf  crane_evb_defconfig  crane_evb_z2_alios.conf  crane_evb_z2_bld_rel.conf  crane_evb_z2_custom_B_V01.conf  (+36 more)
scripts/cmake/: cp_post_build.cmake  extensions.cmake  gen_objliblist.cmake  install_objlib.cmake  kconfig.cmake  module_release.cmake  post_scripts_install.cmake  toolchain.cmake  version.cmake
scripts/kconfig/: checkconfig.py  kconfig.py  kconfiglib.py  menuconfig.py
scripts/mkres/: makerespkg.py  respkg_gen_bin.bat  respkg_release.bat  unmkrespkg.py
tool/: GeneratorRD.py  extract_strings_from_xlsx.bat  extract_strings_from_xlsx.py  extract_strings_from_xlsx_for_mini.bat  gen_image_res.bat  gen_image_res.py  gen_image_res_for_mini.bat  install-x64-evb.bat
tool/T32cmm_4_crane/: _t32cmm_4_crane.bat  configsim.t32  osa_mem.info  readme.txt  t32.cmm
tool/python-3.6.5-embed-amd64/: _curses_panel.cp36-win_amd64.pyd
tool/release_hal/: framework.py  set_uuid.txt
(+3492 files in other folders)
